--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dynamicFeatures = [':core', ':common']
 }
 
 dependencies {
+
+    implementation project(":common")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
