created multi module architecture

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,9 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "SuperApp"
+
 include ':app'
 include ':common'
+include ':navigation'
+include ':features:home'
+include ':features:news'
