--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -1,14 +1,17 @@
+import kz.oceandance.buildsrc.BuildAndroidConfig
+import kz.oceandance.buildsrc.dependencies.KotlinDependencies
+
 apply plugin: 'kotlin-android'
 
 android {
 
-    compileSdk 31
+    compileSdk BuildAndroidConfig.compileSdk
 
     defaultConfig {
-        minSdk 24
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        minSdk BuildAndroidConfig.minSdk
+        targetSdk BuildAndroidConfig.targetSdk
+        versionCode BuildAndroidConfig.versionCode
+        versionName BuildAndroidConfig.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -23,5 +26,5 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.31"
+    implementation KotlinDependencies.kotlin
 }
