--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+import kz.oceandance.buildsrc.Modules
+import kz.oceandance.buildsrc.dependencies.AndroidDependencies
+
 apply plugin: 'com.android.application'
 apply from: '../android_commons.gradle'
 
@@ -22,17 +25,14 @@ android {
 
 dependencies {
 
-    implementation project(":common")
-    implementation project(":navigation")
-    implementation project(":features:home")
-    implementation project(":features:news")
+    implementation project(Modules.common)
+    implementation project(Modules.navigation)
+    implementation project(Modules.featureHome)
+    implementation project(Modules.featureNews)
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    // ANDROID
+    implementation AndroidDependencies.appCompat
+    implementation AndroidDependencies.navigation
+    implementation AndroidDependencies.navigationFrag
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
