--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,11 +1,14 @@
+import kz.oceandance.buildsrc.dependencies.AndroidDependencies
+
 apply plugin: 'com.android.library'
 apply from: '../android_commons.gradle'
 
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation AndroidDependencies.appCompat
 
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    implementation AndroidDependencies.navigation
+    implementation AndroidDependencies.navigationFrag
+
     implementation project(":navigation")
 }
