--- a/features/news/build.gradle
+++ b/features/news/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply from: '../../android_commons.gradle'
+apply from: '../../android_feature_dependencies.gradle'
 
 android {
 
@@ -14,18 +14,4 @@ android {
     viewBinding {
         enabled = true
     }
-}
-
-dependencies {
-
-    implementation project(":common")
-    implementation project(":navigation")
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
