--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ android {
 dependencies {
 
     implementation project(Modules.common)
-    implementation project(Modules.navigation)
     implementation project(Modules.featureHome)
     implementation project(Modules.featureNews)
 
@@ -34,5 +33,6 @@ dependencies {
     implementation AndroidDependencies.appCompat
     implementation AndroidDependencies.navigation
     implementation AndroidDependencies.navigationFrag
+    implementation AndroidDependencies.navigationFeature
 
 }
