single activity logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
 
     implementation project(Modules.common)
+    implementation project(Modules.featureMain)
     implementation project(Modules.featureHome)
     implementation project(Modules.featureNews)
 
